<resources>
    <string name="app_name">Antisurveillance 1.1.3</string>
    <string name="splash_app_name" translatable="false">AntiSurveillance</string>
    <string name="splash_platform" translatable="false">Android</string>

    <string name="google_maps_api_key" translatable="false">AIzaSyAazfvu8gJyeRmJOzJh912j2nnzRCT2wJM</string>

    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="accept_permission">Accept permission</string>
    <string name="mic_permissions_text">Accept permission to block\nthe microphone</string>
    <string name="gps_permissions_text">Accept permissions to block\nGPS</string>
    <string name="details">Details</string>

    <string name="home_tab">Home</string>
    <string name="mic_tab">Mic</string>
    <string name="geo_tab">Geo</string>
    <string name="settings_tab">Settings</string>
    <string name="secure_startup">Secure startup (experimental feature)</string>
    <string name="root_access">Root access</string>
    <string name="dark_theme">Dark theme</string>

    <string name="russian_lang">Russian</string>
    <string name="english_lang">English</string>
    <string name="language">Language</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="mock_location">Mock My Location</string>
    <string name="clear_mock_location">Clear Mock Location</string>
    <string name="location_mocked">Location has been mocked</string>
    <string name="location_mock_cleared">Location mock has been cleared</string>
    <string name="mic_state_locked">Microphone has been locked</string>
    <string name="mic_state_unlocked">Microphone has been unlocked</string>

    <string name="state_location_mocked">Status of location mock</string>
    <string name="state_mic_blocked">Status of locking microphone</string>
    <string name="system_status">System status</string>

    <string name="permissions_denied">Permissions denied</string>
    <string name="location_permissions_denied_message">You cannot continue work with this app without accepting of location permission. To accept permissions go in app settings</string>
    <string name="permission_description">Permission description</string>
    <string name="record_audio_permissions_denied_message">You cannot continue work with this app without accepting of record audio permission. To accept permissions go in app settings</string>

    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="service_channel_name">Processing location and mic locking</string>

    <string name="gps_permission_description">Блокируйте отслеживание геолокации. Приложение которое ценит вашу свободу и право на частную жизнь, наш исходный код программы размещен на github. Вы можете подключить наш репозиторий для f-droid чтобы стабильно получать обновления.\nПриложение находится на стадии тестирования, поддерживаются не все модели смартфонов. Для корректной работы приложения вам необходимо подтвердить доступ к вашей геолокации для замены ее на фиктивную. Мы собираем полностью анонимную статистику чтобы добавлять все больше поддерживаемых устройств. Сторонние приложения любят собирать о вас личную информацию, смотрят куда вы ходите и слушают ваш микрофон чтобы предлагать вам контекстную рекламу и заведения рядом с теми местами где вы часто находитесь. Мы подготовили простое, бесплатное и эффективное решение благодаря которому вы в несколько простых шагов получите больше свободы в вашу частную жизнь, без регистрации и указания каких либо личных данных</string>
    <string name="mic_permission_description">Блокируйте прослушку. Приложение которое ценит вашу свободу и право на частную жизнь, наш исходный код программы размещен на github. Вы можете подключить наш репозиторий для f-droid чтобы стабильно получать обновления.n\Приложение находится на стадии тестирования, поддерживаются не все модели смартфонов. Для корректной работы приложения вам необходимо подтвердить доступ к микрофону для его подавления в момент активации. Мы собираем полностью анонимную статистику чтобы добавлять все больше поддерживаемых устройств. Сторонние приложения любят собирать о вас личную информацию, смотрят куда вы ходите и слушают ваш микрофон чтобы предлагать вам контекстную рекламу и заведения рядом с теми местами где вы часто находитесь. Мы подготовили простое, бесплатное и эффективное решение благодаря которому вы в несколько простых шагов получите больше свободы в вашу частную жизнь без регистрации и указания каких либо личных данных</string>
    <string name="enabled">On</string>
    <string name="disabled">Off</string>
</resources>